--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
-  <link rel="shortcut icon" href="{{site.icon}}" type="image/x-icon">
-  <link rel="icon" href="{{site.icon}}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{site.url}}{{site.icon}}" type="image/x-icon">
+  <link rel="icon" href="{{site.url}}{{site.icon}}" type="image/x-icon">
 </head>
