--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <i class="icon fa fa-envelope"></i></a>
 
         <a aria-label="Github" target="_blank" href="https://github.com/{{site.github}}">
-          <i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+          <i class="icon fa fa-github" aria-hidden="true"></i></a>
 
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/{{site.twitter}}">
           <i class="icon fa fa-twitter" aria-hidden="true"></i></a>
