Change icon large

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
           <i class="icon fa fa-envelope"></i></a>
 
         <a aria-label="Github" target="_blank" href="https://github.com/{{site.github}}">
-          <i class="icon fa fa-github" aria-hidden="true"></i></a>
+          <i class="icon fa-2x fa-github" aria-hidden="true"></i></a>
 
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/{{site.twitter}}">
-          <i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+          <i class="icon fa-2x fa-twitter" aria-hidden="true"></i></a>
       </div>
   </div>
   <!-- <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a> -->
