Add Slack Channel link and icon
Add Slack Channel link and icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
 
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/{{site.twitter}}">
           <i class="icon fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+        
+        <a aria-label="Slack" target="_blank" href="https://trisasnava.slack.com/join/shared_invite/enQtODg1NjI0NTc1NzAzLTBjYTM1YjQxZWZkMTExYTBlNTcxNjQzYTc0MjRmNDNjMmIxZmMwZjM5ODFkZWExNjJkNWMwZWRjOGJlODdiM2Q">
+          <i class="icon fa fa-slack fa-2x" aria-hidden="true"></i></a>
       </div>
   </div>
   <!-- <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a> -->
