--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="cf-2fa-verify" content="86b3a56a2fe6257">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#fa7268" />
   <meta name="apple-mobile-web-app-capable" content="yes">
